--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".TwitterApplication"
@@ -15,14 +16,6 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppBaseTheme.Light.NoActionBar"
         >
-        <meta-data
-            android:name="AA_DB_NAME"
-            android:value="RestClient.db"
-            />
-        <meta-data
-            android:name="AA_DB_VERSION"
-            android:value="1"
-            />
 
         <activity
             android:name=".activities.LoginActivity"
