--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppBaseTheme.Light.NoActionBar"
         >
-
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/app_name"
@@ -42,6 +41,8 @@
             android:name=".activities.FeedActivity"
             android:label="@string/title_activity_feed"
             >
+        </activity>
+        <activity android:name=".activities.HomeActivity">
         </activity>
     </application>
 
