--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,15 +37,10 @@
                     />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.FeedActivity"
-            android:label="@string/title_activity_feed"
-            >
-        </activity>
-        <activity android:name=".activities.HomeActivity">
-        </activity>
-        <activity android:name=".activities.ProfileActivity">
-        </activity>
+
+        <activity android:name=".activities.HomeActivity"/>
+        <activity android:name=".activities.ProfileActivity"/>
+
     </application>
 
 </manifest>
