--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,10 +37,10 @@
                     />
             </intent-filter>
         </activity>
-
         <activity android:name=".activities.HomeActivity"/>
         <activity android:name=".activities.ProfileActivity"/>
-
+        <activity android:name=".activities.SearchActivity">
+        </activity>
     </application>
 
 </manifest>
